--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <title>Advanced JavaScript</title>
 </head>
 <body>
-
-<a href="demos">Demos</a>
-<a href="exercises">Exercises</a>
+<h2>Advanced Javascript class index</h2>
+<ul>
+  <li><a href="demos">Demos</a></li>
+  <li><a href="exercises">Exercises</a></li>
+</ul>
 
 
 </body>
