--- a/exercises/ex-02/begin/index.html
+++ b/exercises/ex-02/begin/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Exercise 2</title>
-  <script src="bundle.js" defer></script>
+  <script type="module" src="utils.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
+
+<div id="output">
+
+</div>
 
 </body>
 </html>
