--- a/exercises/ex-03/end/index.html
+++ b/exercises/ex-03/end/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exercise 3</title>
-  <script src="bundle.js" defer></script>
+  <title>Exercise 2</title>
+  <script type="module" src="utils.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
+
+<div id="output">
+
+</div>
 
 </body>
 </html>
