--- a/exercises/ex-05/end/index.html
+++ b/exercises/ex-05/end/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Exercise 5</title>
-  <script src="bundle.js" defer></script>
+  <script type="module" src="utils.js"></script>
+  <script type="module" src="people.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
 
-</body>
+<div id="output">
+
+</div>
 </html>
