--- a/exercises/ex-10/begin/index.html
+++ b/exercises/ex-10/begin/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Exercise 10</title>
-  <script src="bundle.js" defer></script>
+  <script type="module" src="utils.js"></script>
+  <script type="module" src="people.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
 
