--- a/exercises/ex-08/begin/index.html
+++ b/exercises/ex-08/begin/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Exercise 8</title>
-  <script src="bundle.js" defer></script>
+  <script type="module" src="utils.js"></script>
+  <script type="module" src="people.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
+<div id="output">
 
+</div>
 </body>
 </html>
