--- a/exercises/ex-11/begin/index.html
+++ b/exercises/ex-11/begin/index.html
@@ -6,6 +6,7 @@
   <script type="module" src="utils.js"></script>
   <script type="module" src="people.js"></script>
   <script type="module" src="main.js"></script>
+  <script type="module" src="Person.js"></script>
 </head>
 <body>
 <div id="output">
