--- a/exercises/ex-19/begin/index.html
+++ b/exercises/ex-19/begin/index.html
@@ -2,41 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exercise 18</title>
-  <script type="module" src="utils.js"></script>
-  <script type="module" src="people.js"></script>
-  <script type="module" src="main.js"></script>
+  <title>Exercise 19</title>
+
 </head>
 <body>
 
-<h2>Add a person</h2>
-<form id="new-person-form">
-  <div>
-    <label for="first-name">First Name:</label>
-    <input type="text" id="first-name">
-  </div>
-  <div>
-    <label for="last-name">Last Name:</label>
-    <input type="text" id="last-name">
-  </div>
-  <div>
-    <label for="birth-date">Birth Date (YYYY-MM-DD):</label>
-    <input type="text" id="birth-date">
-  </div>
-  <div>
-    <label>Gender: </label>
-    <input type="radio" id="gender-female" name="gender" value="female" checked>
-    <label for="gender-female">Female</label>
-    <input type="radio" id="gender-male" name="gender" value="male">
-    <label for="gender-male">Male</label>
-  </div>
-  <div>
-    <button type="submit" id="submit-button">Add a person</button>
-  </div>
-  <div>
-    <button type="button" id="show-all-button">Show all people</button>&nbsp;
-    <button type="button" id="delete-all-button">Clear all people</button>
-  </div>
-</form>
+<h2>Go to the console</h2>
+
+<script>
+
+  rollDice = () => Math.floor(Math.random() * 7);
+
+  console.log('Dice result: ', rollDice());
+
+</script>
 </body>
 </html>
