--- a/demos/closures/index.html
+++ b/demos/closures/index.html
@@ -9,9 +9,15 @@
 <h2>Check the console for output</h2>
 
 <script>
-  // Without closure
-  let names = ['John', 'Jessica', 'Ron', 'Lisa'];
+  let name = "John";
 
+  function sayHi() {
+    alert("Hi, " + name);
+  }
+
+  name = "Pete";
+
+  sayHi(); // what will it show: "John" or "Pete"?
 
 
 </script>
