Fixed ex14 begin

--- a/exercises/ex-14/begin/index.html
+++ b/exercises/ex-14/begin/index.html
@@ -32,7 +32,9 @@
     <input type="radio" id="gender-male" name="gender" value="male">
     <label for="gender-male">Male</label>
   </div>
+  <div>
+    <button type="button" id="submit-button">Add a person</button>
+  </div>
 </form>
-
 </body>
 </html>
