Fixed title and desc

--- a/demos/array-searching/index.html
+++ b/demos/array-searching/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Array Processing</title>
+  <title>Array Searching</title>
 </head>
 <body>
-<h1>Array processing</h1>
+<h1>Array searching</h1>
 <h2>Check the console for output</h2>
 
 <script>
